# DnsDropper

./: Cargo.toml  Dockerfile  LICENSE  README.md  armv7-build.Dockerfile  build.rs
.github/workflows/: docker-image.yml
config/: internal.yaml  server-config.template.yaml  server.yaml
docs/: config.section.logging.md  config.section.server.md  config.section.udp_proxy.md
logger/src/: lib.rs
packets/: Cargo.toml
packets/src/: dns.rs  packet.rs
server/: Cargo.toml  build.rs
server/src/: exchange.rs  filter_handler.rs  packet_handler.rs  proxy_handler.rs  server.rs
server/src/config/: internal.rs  server_config.rs
server/template/: internal.yaml
src/: dns.rs  dns_proxy.rs  filter.rs  internal.rs  logging.rs  main.rs  server.rs  server_config.rs
test/config/: server.yaml
