[package]
name = "dns_dropper"
version = "0.0.1"
edition = "2021"
authors = ["kalev gonvick <kalev.gonvick@outlook.com>"]
description = "A customizable light-weight DNS proxy with domain filtering capabilities."
license = "MIT"
readme = "README.md"

[[bin]]
name = "dns_dropper"
path = "src/server.rs"

keywords = [
    "dns",
    "dropper",
    "dns-filter",
    "ad-block",
    "udp"
]

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = 3

[build-dependencies.config_struct]
version = "~0.5.0"
features = ["yaml-parsing"]

[dependencies]
logs = "0.7.1"
regex = "1.10.3"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "time", "sync"] }
serde_yaml = "0.9.31"
serde = { version = "1.0.196", features = ["derive"] }
reqwest = { version = "0.12.2" }
log = { version = "0.4.17", features = [] }
env_logger = "0.11.1"
url = "2.5.0"
clap = { version = "4.5.4", features = ["derive"] }
