workspace = { members = ["logger", "packets", "server"] }
[package]
name = "dns_dropper"
version = "0.0.1"
edition = "2021"
authors = ["kalev gonvick <kalev.gonvick@outlook.com>"]
description = "A customizable light-weight DNS proxy with domain filtering capabilities."
license = "MIT"
readme = "README.md"

[[bin]]
name = "dns_dropper"
path = "src/main.rs"

keywords = [
    "dns",
    "dropper",
    "dns-filter",
    "ad-block",
    "udp"
]

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = 3

[dependencies]
logger = { path = "./logger" }
server = { path = "./server" }
logs = "0.7.1"
regex = "1.10.3"
serde_yaml = "0.9.31"
serde = { version = "1.0.196", features = ["derive"] }
reqwest = { version = "0.12.2" }
log = { version = "0.4.17", features = [] }
env_logger = "0.11.1"
url = "2.5.0"
clap = { version = "4.5.4", features = ["derive"] }
tokio = "1.38.0"
